--- a/frokant/src/assets/vars.scss
+++ b/frokant/src/assets/vars.scss
@@ -3,3 +3,8 @@ $color-theme: #f19a0b;
 $color-background: #f1ecec;
 $color-text:#565555;
 $color-meta: #a7a4a4;
+$color-drinks: pink;
+$color-amuse: green;
+$color-main: red;
+$color-dessert: lightblue;
+$color-breakfast: goldenrod;
