--- a/frokant/src/assets/vars.scss
+++ b/frokant/src/assets/vars.scss
@@ -1,6 +1,7 @@
 $color-dark: #4A4A4A;
-$color-theme: #f19a0b;
-$color-background: #f1ecec;
+$color-theme: #F5A623;
+//$color-background: #f1ecec;
+$color-background:rgba(226,219,219,.35);
 $color-text:#565555;
 $color-meta: #a7a4a4;
 $color-drinks: pink;
