Add atag colors

--- a/frokant/src/assets/vars.scss
+++ b/frokant/src/assets/vars.scss
@@ -1,9 +1,10 @@
 $color-dark: #4A4A4A;
 $color-theme: #F5A623;
-//$color-background: #f1ecec;
 $color-background:rgba(226,219,219,.35);
 $color-text:#565555;
 $color-meta: #a7a4a4;
+$color-link: #2D89CC;
+$color-link-hover: #1A93FF;
 $color-drinks: pink;
 $color-amuse: green;
 $color-main: red;
