Vars secondary color

--- a/frokant/src/assets/vars.scss
+++ b/frokant/src/assets/vars.scss
@@ -1,5 +1,6 @@
 $color-dark: #4A4A4A;
 $color-theme: #F5A623;
+$color-secondary: #49B4AA;
 $color-background:rgba(226,219,219,.35);
 $color-text:#565555;
 $color-meta: #a7a4a4;
