Change color meta

--- a/frokant/src/assets/vars.scss
+++ b/frokant/src/assets/vars.scss
@@ -3,7 +3,7 @@ $color-theme: #F5A623;
 $color-secondary: #49B4AA;
 $color-background:rgba(226,219,219,.35);
 $color-text:#565555;
-$color-meta: #a7a4a4;
+$color-meta: #9097a0;
 $color-link: #2D89CC;
 $color-link-hover: #1A93FF;
 $color-drinks: pink;
